2000-09-15  Radek Doulik  <rodo@helixcode.com>

	* htmlembedded.c (destroy): remove widget from html widget

2000-09-14  Dan Winship  <danw@helixcode.com>

	* htmlembedded.c (destroy): Just hide the embedded widget rather
	than destroying it, to prevent it from being destroyed twice.

2000-09-14  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-movement.c (html_engine_forward_word): refactored
	(html_engine_backward_word): likewise

	* gtkhtml.c (load_keybindings): added M-left, M-b bindings for
	backward-word and likewise for forward-word

	* htmltable.c (set_cell): new helper function, sets cell in table
	on col,row
	(add_cell): refactored set_cells function, filling table with
	cells, which have cspan or rspan > 1 is delayed to
	html_table_end_table, also use set_cell
	(cell_fill): new helper function, fills cell in table (if cspan or
	rspan > 1)
	(html_table_end_table): fill table with cells here
	(get_rc): not needed anymore
	(next): remove call to get_rc
	(prev): likewise

	* htmltablecell.h: added position info to TableCell (col, row)

	* htmlengine-save.c (encode_entities): updated for utf8

	* htmlclueflow.c (spell_check_word_mark): index -> offset and not
	reversed

2000-9-13  Larry Ewing  <lewing@helixcode.com>

	* htmliframe.c (iframe_object_requested): hook up the object
	requested signal.

2000-09-13  Radek Doulik  <rodo@helixcode.com>

	* htmlengine.c (html_engine_set_arg): configure pspell to use utf8
	encoding

	* htmltext.c: use unicode_offset_to_index and
	unicode_index_to_offset everywhere
	(convert_nbsp): updated to support utf8

	* htmlgdkpainter.c (utf8_gdk_text_width): last argument changed to
	len and bytes are calculated using unicode_offset_to_index
	(utf8_gdk_draw_text): likewise

2000-09-12  Radek Doulik  <rodo@helixcode.com>

	* htmltextslave.c (draw_spell_errors): use HTMLSpellErrorColor

	* htmlengine.c (html_engine_set_arg): moved spell initialization
	here

	* htmlclueflow.c (html_clueflow_spell_check): do live spell